--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -1,1 +1,14 @@
 @use 'base';
+
+@import 'primevue/resources/themes/saga-blue/theme.css';
+@import 'primevue/resources/primevue.min.css';
+// @import 'primeicons/primeicons.css';
+
+@import 'primeflex/src/_variables.scss';
+@import 'primeflex/src/_grid.scss';
+@import 'primeflex/src/_formlayout.scss';
+@import 'primeflex/src/_display.scss';
+@import 'primeflex/src/_text.scss';
+@import 'primeflex/src/flexbox/_flexbox.scss';
+@import 'primeflex/src/_spacing.scss';
+@import 'primeflex/src/_elevation.scss';
