--- a/src/styles/base/index.scss
+++ b/src/styles/base/index.scss
@@ -1,23 +1,21 @@
-$background-color: #E5E5E5;
+$background-color: #e5e5e5;
 
 @font-face {
   font-family: 'Open Sans';
   font-style: normal;
   font-weight: 400;
-  src: local(''),
-      url('/fonts/open-sans-v18-latin-regular.woff2') format('woff2');
+  src: local(''), url('/fonts/open-sans-v18-latin-regular.woff2') format('woff2');
 }
 
 @font-face {
   font-family: 'Open Sans';
   font-style: normal;
   font-weight: 700;
-  src: local(''),
-      url('/fonts/open-sans-v18-latin-700.woff2') format('woff2');
+  src: local(''), url('/fonts/open-sans-v18-latin-700.woff2') format('woff2');
 }
 
 :root {
   font-family: 'Open Sans';
-  color: #48545B;
+  color: #48545b;
   background-color: $background-color;
 }
