--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -2,8 +2,7 @@
 
 @import 'primevue/resources/themes/saga-blue/theme.css';
 @import 'primevue/resources/primevue.min.css';
-// @import 'primeicons/primeicons.css';
-
+@import 'primeicons/primeicons.css';
 @import 'primeflex/src/_variables.scss';
 @import 'primeflex/src/_grid.scss';
 @import 'primeflex/src/_formlayout.scss';
